2009-01-10  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodebasemodule.vala:

	Use correct C type for set accessors of properties whose get
	accessor returns owned value, fixes bug 538666

2009-01-10  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodebasemodule.vala:
	* gobject/valaccodedelegatemodule.vala:

	Fix critical and generated code for static delegate fields,
	fixes bug 563016

2009-01-10  Jürg Billeter  <j@bitron.ch>

	* vala/valafield.vala:

	Report error when field type is less accessible than field

2009-01-09  Jürg Billeter  <j@bitron.ch>

	* vala/valasemanticanalyzer.vala:

	Fix memory leak when retrieving values from property getters
	returning owned values, fixes bug 564081

2009-01-09  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodememberaccessmodule.vala:

	Do not free values returned via g_object_get prematurely, require
	properties without accessor methods to return an owned value,
	fixes bug 559644

2009-01-09  Jürg Billeter  <j@bitron.ch>

	* vala/valaunaryexpression.vala:

	Fix critical when trying to access instance member,
	fixes bug 566337

2009-01-09  Jürg Billeter  <j@bitron.ch>

	* vala/valacodenode.vala:

	Add CodeNode.get_type_name method

	* vapi/gobject-2.0.vapi:

	Add G_TYPE_FROM_INSTANCE binding

2009-01-09  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gstreamer-netbuffer-0.10/:

	Fix GstNetAddress binding, fixes bug 564924

	* vapi/gstreamer-netbuffer-0.10.vapi: regenerated

2009-01-09  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gstreamer-base-0.10/:

	Fix gst_base_transform_get_unit_size bindings, fixes bug 565978

	* vapi/gstreamer-base-0.10.vapi: regenerated

2009-01-09  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gstreamer-0.10/:

	Fix gst_uri_handler_get_protocols* bindings, fixes bug 566375

	* vapi/gstreamer-0.10.vapi: regenerated

2009-01-09  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gstreamer-0.10/:

	Fix gst_object_get_name, gst_object_get_name_prefix, and